修复config.toml，增加chrome自带翻译api支持，优化hosts写入函数

--- a/configs/config.toml
+++ b/configs/config.toml
@@ -47,7 +47,7 @@ WithIPv6 = false
 # URL for testing HTTPS connection
 HttpsURL = "https://translate.google.com"
 # Domains for write into hosts file
-Domains = ["translate.google.com", "translate.googleapis.com"]
+Domains = ["translate.google.com", "translate.googleapis.com","translate-pa.googleapis.com"]
 
 [[Sites]]
 Name = "Cloudflare"
