config: 调整检测进程数和IP获取数量设置。

--- a/configs/config.toml
+++ b/configs/config.toml
@@ -8,7 +8,7 @@ Workers = 300
 # Limit the maximum number of IPs scanned. No limit if it is less than or equal to 0.
 ScannedLimit = 0
 # Limit the maximum number of IPs found. No limit if it is less than or equal to 0.
-FoundLimit = 10
+FoundLimit = 1000
 
 [Ping]
 # avaivable values: icmp, tcp, udp
@@ -20,7 +20,7 @@ Count = 3
 # Millisecond
 Timeout = 500
 # true: it's legal if it succeeds every time. false: it's legal if it has one succeeds
-all = false
+all = true
 
 [HTTP]
 # Standard HTTPS ports are 443 and 8443.
@@ -43,7 +43,7 @@ CustomIPRangesFile = "./data/custom_google_translate_ip_ranges.txt"
 # Output the available IPs found
 IPOutputFile = "./data/output_google_translate_ips.txt"
 # # boolean that turns on/off scanning for IPv6. true or false.
-WithIPv6 = false
+WithIPv6 = true
 # URL for testing HTTPS connection
 HttpsURL = "https://translate.google.com"
 # Domains for write into hosts file
